--- a/resources/styles/common/global.scss
+++ b/resources/styles/common/global.scss
@@ -729,7 +729,7 @@ select {
 //   box-shadow: inset -3px -3px 10px rgba(0, 0, 0, 0.4), 0 0 10px black;
 // }
 
-.single-product-grid {align-items: end;}
+.single-product-grid {align-items: flex-end;}
 
 
 .slide-up-alt {
